--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
-                    <a href="" download class="btn btn2">Download CV</a><!--add CV inside href-->
+                    <a href="Sheila Khayeshe CV.pdf" download class="btn btn2">Download CV</a><!--add CV inside href-->
                 </div>
                 <div class="contact-right">
 
