--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Bonjour! My name is Sheila Khayeshe, a creative and curious mind with a background in Education
-                        and a growing passion for tech. I enjoy building simple, interactive projects that make learning
-                        and communication easier. Multilingual in English, French, Swahili, I  love exploring opportunities
-                        that combine education, creativity  and technology.
+                    <p>Bonjour!I’m Sheila Khayeshe from Nairobi, Kenya. I’m a french teacher by profession and a self-taught web developer.
+                        I create clean, responsive websites. I work with HTML, CSS and JavaScript, and I use Git/GitHub to manage my project
+                        I enjoy bringing ideas to life on the web and I’m always learning new skills — from UI design principles to building better user experiences. 
+                        Right now, I’m looking for internship opportunities where I can grow as a developer, contribute to real projects, and learn from a team.
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" data-title="skills">Skills</p>
